--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -159,8 +159,8 @@
     <string name="GroupCreateActivity_file_io_exception">File I/O error, couldn\'t create a temporary image file.</string>
     <string name="GroupCreateActivity_avatar_content_description">Group avatar</string>
     <string name="GroupCreateActivity_menu_create_title">Create group</string>
-    <string name="GroupCreateActivity_creating_group">Creating %1$s&#8230;</string>
-    <string name="GroupCreateActivity_updating_group">Updating %1$s&#8230;</string>
+    <string name="GroupCreateActivity_creating_group">Creating %1$s...</string>
+    <string name="GroupCreateActivity_updating_group">Updating %1$s...</string>
     <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">Cannot add non-TextSecure contacts to an existing TextSecure group</string>
     <string name="GroupCreateActivity_clear_avatar">Clear avatar?</string>
 
@@ -358,9 +358,9 @@
     <string name="KeyExchangeInitiator_send">Send</string>
 
     <!-- MessageDisplayHelper -->
-    <string name="MessageDisplayHelper_bad_encrypted_message">Bad encrypted message&#8230;</string>
-    <string name="MessageDisplayHelper_decrypting_please_wait">Decrypting, please wait&#8230;</string>
-    <string name="MessageDisplayHelper_message_encrypted_for_non_existing_session">Message encrypted for non-existing session&#8230;</string>
+    <string name="MessageDisplayHelper_bad_encrypted_message">Bad encrypted message...</string>
+    <string name="MessageDisplayHelper_decrypting_please_wait">Decrypting, please wait...</string>
+    <string name="MessageDisplayHelper_message_encrypted_for_non_existing_session">Message encrypted for non-existing session...</string>
     <string name="MessageDisplayHelper_error_decrypting_message">Error decrypting message.</string>
 
     <!-- MmsDatabase -->
