--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -122,12 +122,17 @@
     <string name="ShareActivity_share_with">Share with</string>
 
     <!-- ExportFragment -->
-    <string name="ExportFragment_export_to_sd_card">Export to SD card?</string>
-    <string name="ExportFragment_this_will_export_your_encrypted_keys_settings_and_messages">This
-        will export your encrypted keys, settings, and messages to the SD card.
+    <string name="ExportFragment_export_to_sd_card">Export to storage?</string>
+    <string name="ExportFragment_this_will_export_your_encrypted_keys_settings_and_messages">
+        This will export your secret keys and messages to your phone\'s storage using your current password.
     </string>
+    <string name="ExportFragment_this_will_export_your_encrypted_keys_settings_and_messages_unencrypted">
+        This will export your secret keys and messages to your phone\'s storage <b>without encryption</b> since you do not have a password set.\n\n
+        Anyone with access to your phone storage, including other Android apps, will be able to read this. Continue?
+    </string>
+
     <string name="ExportFragment_export">Export</string>
-    <string name="ExportFragment_export_plaintext_to_sd_card">Export plaintext to SD card?</string>
+    <string name="ExportFragment_export_plaintext_to_sd_card">Export plaintext to storage?</string>
     <string name="ExportFragment_warning_this_will_export_the_plaintext_contents">Warning, this will
         export the plaintext contents of your TextSecure messages to the SD card.
     </string>
@@ -175,9 +180,7 @@
     <string name="ImportFragment_cancel">Cancel</string>
     <string name="ImportFragment_restore_encrypted_backup">Restore encrypted backup?</string>
     <string name="ImportFragment_restoring_an_encrypted_backup_will_completely_replace_your_existing_keys">
-        Restoring an encrypted backup will completely replace your existing keys, preferences, and
-        messages. You will lose any information that\'s in your current TextSecure install but not
-        in the backup.
+        Restoring an encrypted backup will <b>completely replace your existing keys, sessions and sessions.</b> You will need to re-register with the TextSecure service if you\'re currently registered.
     </string>
     <string name="ImportFragment_restore">Restore</string>
     <string name="ImportFragment_import_plaintext_backup">Import plaintext backup?</string>
@@ -189,6 +192,7 @@
     <string name="ImportFragment_import_plaintext_backup_elipse">Import plaintext backup...</string>
     <string name="ImportFragment_no_plaintext_backup_found">No plaintext backup found!</string>
     <string name="ImportFragment_error_importing_backup">Error importing backup!</string>
+    <string name="ImportFragment_error_importing_backup_version">Your backup\'s version is unsupported in this TextSecure.</string>
     <string name="ImportFragment_import_complete">Import complete!</string>
     <string name="ImportFragment_restoring">Restoring</string>
     <string name="ImportFragment_restoring_encrypted_backup">Restoring encrypted backup...</string>
@@ -515,10 +519,8 @@
     <!-- database_upgrade_activity -->
     <string name="database_upgrade_activity__updating_database">Updating database...</string>
 
-    <string name="export_fragment__export_encrypted_backup">Export encrypted backup</string>
-    <string name="export_fragment__export_an_encrypted_backup_to_the_sd_card">Export an encrypted
-        backup to the SD card.
-    </string>
+    <string name="export_fragment__export_encrypted_backup">Export TextSecure backup</string>
+    <string name="export_fragment__export_an_encrypted_backup_to_the_sd_card">Backup an encrypted copy of your messages and identity key to the SD card.</string>
     <string name="export_fragment__export_plaintext_backup">Export plaintext backup</string>
     <string name="export_fragment__export_a_plaintext_backup_compatible_with">
         Export a plaintext backup compatible with \'SMSBackup And Restore\' to the SD card.</string>
@@ -526,10 +528,8 @@
     <string name="import_fragment__import_the_database_from_the_default_system">Import the database
         from the default system messenger app.
     </string>
-    <string name="import_fragment__import_encrypted_backup">Import encrypted backup</string>
-    <string name="import_fragment__restore_a_previously_exported_encrypted_textsecure_backup">
-        Restore a previously exported encrypted TextSecure backup.
-    </string>
+    <string name="import_fragment__import_encrypted_backup">Restore TextSecure backup</string>
+    <string name="import_fragment__restore_a_previously_exported_encrypted_textsecure_backup">Restore a previous encrypted TextSecure backup.</string>
     <string name="import_fragment__import_plaintext_backup">Import plaintext backup</string>
     <string name="import_fragment__import_a_plaintext_backup_file">
         Import a plaintext backup file. Compatible with \'SMSBackup And Restore.\'</string>
